@@ -1,0 +1,86 @@
+/*
+ * =============================================================================
+ * 
+ *   Copyright (c) 2007, The JASYPT team (http://www.jasypt.org)
+ * 
+ *   Licensed under the Apache License, Version 2.0 (the "License");
+ *   you may not use this file except in compliance with the License.
+ *   You may obtain a copy of the License at
+ * 
+ *       http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS,
+ *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *   See the License for the specific language governing permissions and
+ *   limitations under the License.
+ * 
+ * =============================================================================
+ */
+package org.jasypt.encryption.pbe.config;
+
+import org.jasypt.commons.CommonUtils;
+
+
+/**
+ * <p>
+ * Bean implementation for {@link StringPBEConfig}. This class allows 
+ * the values for the configuration parameters to be set
+ * via "standard" <tt>setX</tt> methods.
+ * </p>
+ * <p>
+ * For any of the configuration parameters, if its <tt>setX</tt>
+ * method is not called, a <tt>null</tt> value will be returned by the
+ * corresponding <tt>getX</tt> method. 
+ * </p>
+ * 
+ * @since 1.3
+ * 
+ * @author Daniel Fern&aacute;ndez Garrido
+ * 
+ */
+public class SimpleStringPBEConfig
+        extends SimplePBEConfig
+        implements StringPBEConfig {
+    
+    private String stringOutputType = null;
+
+
+    /**
+     * <p>
+     * Creates a new <tt>SimpleStringPBEConfig</tt> instance.
+     * </p>
+     */
+    public SimpleStringPBEConfig() {
+        super();
+    }
+
+    
+    /**
+     * <p>
+     * Sets the the form in which String output
+     * will be encoded. Available encoding types are:
+     * </p>
+     * <ul>
+     *   <li><tt><b>base64</b></tt> (default)</li>
+     *   <li><tt><b>hexadecimal</b></tt></li>
+     * </ul>
+     * <p>
+     * If not set, null will be returned.
+     * </p>
+     * 
+     * @param stringOutputType the string output type.
+     */
+    public void setStringOutputType(String stringOutputType) {
+        this.stringOutputType = 
+            CommonUtils.
+                getStandardStringOutputType(stringOutputType);
+    }
+
+    
+    public String getStringOutputType() {
+        return this.stringOutputType;
+    }
+
+    
+}
